# COMP4003

./: .env  .gitignore  BoT-IoT_linegraph_testing.ipynb  BoT-IoT_raw_training.ipynb  BoT-IoT_testing.ipynb  EGraphSAGE.py  EGraphSAGE_papercode.py  EGraphSAGE_testing.ipynb  EgraphSAGE_optimization_jul6.ipynb  GraphSAGE_utils.py  README.md  UNSW_testing.ipynb  config.py  explanations_raw.ipynb  generate_flowgraphs.ipynb  prepare_linegraph_NF-ToN_jul19.ipynb  preprocessing.py  pyproject.toml  requirements.txt  test_egraphsage.ipynb
.ipynb_checkpoints/: pyproject-checkpoint.toml
colab notebookds/: merge_datasets_may20.ipynb
colab notebooks/: initial_model_testing_may16.ipynb  merge_datasets_may20.ipynb
notebooks/: BotIoT_5perc_clean_may16.ipynb  cicids_cleaning_map13.ipynb  unsw_cleaning_may13.ipynb
notebooks/.ipynb_checkpoints/: merging_may16-checkpoint.ipynb  merging_testing_may16-checkpoint.ipynb
notebooks/EDA/: NF-UNSW-NB15.ipynb
notebooks/old notebooks/: BoT-IoT_linegraph_testing.ipynb  BoT-IoT_testing.ipynb  ToN-IoT_v1_linegraph.ipynb  cicids_clean_map13.ipynb  prepare_linegraph_NF-ToN_jul19.ipynb
notebooks/testing/: NF-UNSW-NB15_flowgraph.ipynb  test_egraphsage.ipynb
old notebooks/: EgraphSAGE_optimization_jul6.ipynb  prepare_graphflows.ipynb  prototype_dataset.ipynb
scripts/: Adapted_GNNEXplainer.py  GNNExplainer.py  PGExplainer.py  adapted_GNNExplainer.py  dummy_explainer.py  integrated_gradients.py  train_edge_models.py  train_models.py  train_node_models.py
src/: EGraphSAGE.py  EGraphSAGE_papercode.py  GraphSAGE_utils.py  NIDSExplainer.py  config.py  datasets.py  explanations.py  galli_preprocessing.py
(+14 files in other folders)
