[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nids_hpo"
version = "0.1"
requires-python = ">=3.7" 
readme = "README.md"
dependencies = [
    "ipython",
    # "Pathlib",
    # # "dgl", manually use wheel: pip install  dgl -f https://data.dgl.ai/wheels/torch-2.4/repo.html
    # "torch==2.4.0", #
    # "matplotlib",
    # "pandas",
    # "python-dotenv",
    # "tensorflow",
    # "sklearn"
]

# [tool.setuptools]
# packages = ["my_package"]
# include_package_data = true

[tool.setuptools.packages.find]
where = ["src"]
